--- a/lecture04/styles.css
+++ b/lecture04/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background: rgb(234, 165, 165); 
     margin:0; 
-    display: inline-block;
+    
 }
 
 h1{
@@ -14,3 +14,7 @@ h1{
     
 }
 /* Your code here */
+section{
+    display: inline-block;
+    margin: 20px;
+}
